Added Functionality of Show deleted to Closing CheckList and Chart of Account

--- a/angular/src/account/login/login.component.html
+++ b/angular/src/account/login/login.component.html
@@ -4,7 +4,7 @@
         style="background-image: url(./assets/media//bg/background_1.png);">
         <div *ngIf="multiTenancySideIsTeanant" routerLink="/account/tenant-user-register" class="row d-flex justify-content-end pt-3 pr-5">
             <a  
-                class="btn btn-transparent border text-white">Getting Started</a>
+                class="btn btn-transparent border text-white">Get Started</a>
         </div>
         <div class="kt-grid__item kt-grid__item--fluid kt-login__wrapper">
             <div class="kt-login__container">
