--- a/angular/src/app/main/checklist/checklist.component.html
+++ b/angular/src/app/main/checklist/checklist.component.html
@@ -46,8 +46,8 @@
                                             <span class="slider round"></span>
                                         </label> -->
 
-                                        <label class="switch"><input type="checkbox" id="togBtn" [(checked)]="AllOrActive"  (change)="changeToggleValue()" ><div class="slider round"><!--ADDED HTML --><span class="on">All</span><span class="off">Active</span><!--END--></div></label>
-                                  
+                                        <!-- <label class="switch"><input type="checkbox" id="togBtn" [(checked)]="AllOrActive"  (change)="changeToggleValue()" ><div class="slider round"><span class="on">All</span><span class="off">Active</span></div></label>
+                                   -->
                                    
                                     </div>
                                     <div class="users-box-parent">
@@ -180,20 +180,19 @@
                                                 {{"Assignee" | localize}}
                                                 <p-sortIcon field="AssigneeId"></p-sortIcon>
                                             </th>
-                                            <th class="delete-cell">
+                                            <th class="cell-none">
                                                 <div class="dropdown-toggle"
                                                 data-toggle="dropdown" aria-haspopup="true" scope="col">
                                                     <i class="fas fa-list-ul"></i></div>
-                                                <div class="dropdown-menu">
+                                                <div class="dropdown-menu" style="width:auto !important">
                                                     <div  class="dropdown-item">
-                                                        Show Deleted <label class="kt-checkbox kt-checkbox--bold ml-5 kt-checkbox--brand">
-                                                            <input  type="checkbox">
-                                                            <span></span>
+                                                        <label class="kt-checkbox kt-checkbox--bold mx-2 kt-checkbox--brand">
+                                                            <input  type="checkbox" [(checked)]="AllOrActive" (change)="changeToggleValue()">
+                                                            <span></span> 
                                                         </label>
+                                                        Show Deleted 
                                                     </div>
                                                 </div>
-                                            </th>
-                                            <th class="cell-none">
                                             </th>
                                         </tr>
                                     </ng-template>
@@ -259,10 +258,11 @@
                                                     userId={{j.assigneeId}}></app-user-list-component>
                                             </div>
                                         </td>
-                                        <td class="delete-cell"></td>
+                                        
                                         <td class="toggle-btn-cell">
                                             <div (click)="collapsibleRowClick(j.id)" class="taggle-btn"></div>
                                         </td>
+                                        
                                     </tr>
                                     <!-- show-collapsible-row -->
                                     <tr *ngFor="let j of i.group ; let value = index" class="table-row-collapsible ">
