send approvel email

--- a/angular/src/app/admin/tenants/custom-tenants.component.html
+++ b/angular/src/app/admin/tenants/custom-tenants.component.html
@@ -60,7 +60,7 @@
                                     <tr>
                                         <td>
                                             <span class="ui-column-title">{{'Name' | localize}}</span>
-                                            {{record.fullName}}
+                                            {{record.tenantName}}
                                         </td>
                                         <td>
                                             <span class="ui-column-title"></span>
