--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -399,15 +399,15 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td class="text-black big"><label>{{"Total" | localize}}:</label></td>
+                                            <td class="text-navyblue big"><label><b>{{"Total" | localize}}:</b></label></td>
                                             <td class="text-black big"> {{TotalAmount| formater }}</td>
                                         </tr>
                                         <tr>
-                                            <td class="text-black big"><label>{{"Trial Balance" | localize}}:</label></td>
+                                            <td class="text-navyblue big"><label><b>{{"Trial Balance" | localize}}:</b></label></td>
                                             <td class="text-black big"  >{{trialBalance | formater}}</td>
                                         </tr>
                                         <tr>
-                                            <td class="text-black big"><label>{{"Variance" | localize}}:</label></td>
+                                            <td class="text-navyblue big"><label><b>{{"Variance" | localize}}:</b></label></td>
                                             <td class="text-black big" > {{variance | formater}}</td>
                                         </tr>
                                     </tbody>
