--- a/angular/src/app/main/checklist/checklist.component.html
+++ b/angular/src/app/main/checklist/checklist.component.html
@@ -26,29 +26,28 @@
                     <div class="record-card-header">
                         <div class="record-card-header-bottom">
                             <div class="record-card-header-bottom-inner1">
-                                <button class="btn arrow-btn left-arrow-btn btn-square"  (click)="filterByMonth(-1)">
+                                <button class="btn arrow-btn left-arrow-btn btn-square" (click)="filterByMonth(-1)">
                                     <img src="./assets/media/ClosingCheckList/left-arrow.svg" alt="left-arrow">
                                 </button>
                                 <button class="btn arrow-btn right-arrow-btn btn-square" (click)="filterByMonth(1)">
                                     <img src="./assets/media/ClosingCheckList/right-arrow.svg" alt="right-arrow">
                                 </button>
-                                <h5  style="cursor: default;">{{selectedDate | momentFormat:'MMMM YYYY'}}</h5>
+                                <h5 style="cursor: default;">{{selectedDate | momentFormat:'MMMM YYYY'}}</h5>
 
                             </div>
                             <div class="record-card-header-bottom-inner2">
                                 <div class="upper-content">
-                                    
+
                                     <div>
-                                       
-                                            
                                         <!-- <label class="switch">
                                             <input type="checkbox" [(checked)]="AllOrActive"  (change)="changeToggleValue()">
                                             <span class="slider round"></span>
+                                        </label>  -->
+                                        <!-- <label class="switch"><input type="checkbox" id="togBtn"
+                                                [(checked)]="AllOrActive" (change)="changeToggleValue()">
+                                            <div class="slider round"><span class="on">All</span><span
+                                                    class="off">Active</span></div>
                                         </label> -->
-
-                                        <!-- <label class="switch"><input type="checkbox" id="togBtn" [(checked)]="AllOrActive"  (change)="changeToggleValue()" ><div class="slider round"><span class="on">All</span><span class="off">Active</span></div></label>
-                                   -->
-                                   
                                     </div>
                                     <div class="users-box-parent">
                                         <div class="users-box">
@@ -56,7 +55,7 @@
                                                 class="member-count bg-lightgrey text-blue">
                                                 <span>+{{remainingUserForHeader.length}}</span>
                                                 <div class="member-dropdown">
-                                                    <ul *ngFor="let item of remainingUserForHeader" >
+                                                    <ul *ngFor="let item of remainingUserForHeader">
                                                         <li (click)="GetUserTasks(item.id)">
                                                             <div class="kt-user-card-v2__pic">
                                                                 <div *ngIf="item.picture"
@@ -77,10 +76,10 @@
                                                     </ul>
                                                 </div>
                                             </div>
-                                           
-                                            <div *ngFor="let item of assigniNameForHeader "
-                                                 class="kt-user-card-v2">
-                                                <div (click)="GetUserTasks(item.id)" class="kt-user-card-v2__pic user-image-box">
+
+                                            <div *ngFor="let item of assigniNameForHeader " class="kt-user-card-v2">
+                                                <div (click)="GetUserTasks(item.id)"
+                                                    class="kt-user-card-v2__pic user-image-box">
                                                     <div *ngIf="item.picture" class="kt-badge kt-badge--xl">
                                                         <img class="header-profile-picture m--img-rounded m--marginless m--img-centered"
                                                             alt="Pic" [src]="item.picture">
@@ -94,13 +93,14 @@
                                     </div>
                                     <div class="date-picker">
                                         <input id="monthValue" (ngModelChange)="filterByMonth($event)"
-                                            class="date-field" name="monthValue"
-                                            [(ngModel)]="selectedDate" [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
+                                            class="date-field" name="monthValue" [(ngModel)]="selectedDate"
+                                            [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
                                             (onShown)="onOpenCalendar($event)" type="text" bsDatepicker />
                                     </div>
                                     <div class="dropdown-btn-box">
-                                        <button (click)="openFilterClick()" data-toggle="tooltip" title="More Filters"class="btn btn-square"><img
-                                                src="./assets/media/ClosingCheckList/filter.png" alt="filter"></button>
+                                        <button (click)="openFilterClick()" data-toggle="tooltip" title="More Filters"
+                                            class="btn btn-square"><img src="./assets/media/ClosingCheckList/filter.png"
+                                                alt="filter"></button>
                                     </div>
                                     <form class="search-form pl-3">
                                         <div class="form-group">
@@ -140,7 +140,8 @@
                                                 class="form-control" />
                                         </div>
                                         <div class="block-btn">
-                                            <button class="btn btn-square bg-lightgrey" data-toggle="tooltip" title="Reset Filters" (click)="ResetGrid()">
+                                            <button class="btn btn-square bg-lightgrey" data-toggle="tooltip"
+                                                title="Reset Filters" (click)="ResetGrid()">
                                                 <img src="./assets/media/ClosingCheckList/block.png" alt="block-btn">
                                             </button>
                                         </div>
@@ -181,16 +182,18 @@
                                                 <p-sortIcon field="AssigneeId"></p-sortIcon>
                                             </th>
                                             <th class="cell-none">
-                                                <div class="dropdown-toggle"
-                                                data-toggle="dropdown" aria-haspopup="true" scope="col">
+                                                <div class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                                                    scope="col">
                                                     <i class="fas fa-list-ul"></i></div>
                                                 <div class="dropdown-menu" style="width:auto !important">
-                                                    <div  class="dropdown-item">
-                                                        <label class="kt-checkbox kt-checkbox--bold mx-2 kt-checkbox--brand">
-                                                            <input  type="checkbox" [(checked)]="AllOrActive" (change)="changeToggleValue()">
-                                                            <span></span> 
+                                                    <div class="dropdown-item">
+                                                        <label
+                                                            class="kt-checkbox kt-checkbox--bold mx-2 kt-checkbox--brand">
+                                                            <input type="checkbox" [(checked)]="AllOrActive"
+                                                                (change)="changeToggleValue()">
+                                                            <span></span>
                                                         </label>
-                                                        Show Deleted 
+                                                        Show Deleted
                                                     </div>
                                                 </div>
                                             </th>
@@ -204,7 +207,8 @@
                                 <tbody *ngFor="let i of ClosingCheckList">
 
                                     <tr *ngFor="let j of i.group ; let value = index"
-                                        class="task-table-inner table-repeater" class="{{j.isDeleted == true ? 'warnning' : '' }}">
+                                        class="task-table-inner table-repeater"
+                                        class="{{j.isDeleted == true ? 'warnning' : '' }}">
 
                                         <td class="date-cell" (click)="redirectToDetail(j.id)" *ngIf="value === 0">
                                             <span class=""><b>{{i.dueDate | date:'d'}}</b>
@@ -213,7 +217,7 @@
                                         <td (click)="redirectToDetail(j.id)" *ngIf="value != 0">
                                             <span class="">{{""}}</span>
                                         </td>
-                                        <td class="task-cell"  (click)="redirectToDetail(j.id)">
+                                        <td class="task-cell" (click)="redirectToDetail(j.id)">
                                             <span style="cursor: pointer;" class="task-box"><span
                                                     class="task-box-dot-{{j.StatusColor}}"></span><b>{{j.taskName}}</b></span>
                                         </td>
@@ -258,11 +262,11 @@
                                                     userId={{j.assigneeId}}></app-user-list-component>
                                             </div>
                                         </td>
-                                        
+
                                         <td class="toggle-btn-cell">
                                             <div (click)="collapsibleRowClick(j.id)" class="taggle-btn"></div>
                                         </td>
-                                        
+
                                     </tr>
                                     <!-- show-collapsible-row -->
                                     <tr *ngFor="let j of i.group ; let value = index" class="table-row-collapsible ">
@@ -303,11 +307,11 @@
                                                                 class="form-control border-0 {{j.StatusColor}} text-white">
                                                                 <option value="" selected disabled hidden>
                                                                     {{j.status}}</option>
-                                                                    <option value="1">{{"NotStarted" | localize}}</option>
-                                                                    <option value="2">{{"InProcess" | localize}}</option>
-                                                                    <option value="3">{{"OnHold" | localize}}</option>
-                                                                    <option value="4">{{"Completed" | localize}}</option>
-                                                                </select>
+                                                                <option value="1">{{"NotStarted" | localize}}</option>
+                                                                <option value="2">{{"InProcess" | localize}}</option>
+                                                                <option value="3">{{"OnHold" | localize}}</option>
+                                                                <option value="4">{{"Completed" | localize}}</option>
+                                                            </select>
                                                         </form>
                                                     </div>
                                                 </li>
@@ -327,7 +331,7 @@
                                 {{'NoData' | localize}}
                             </div>
                         </div>
-                        
+
                         <div class="pagination-block">
                             <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
                                 (onPageChange)="getClosingCheckListAllTasks($event)"
